20220731-Add delete function and animation

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     Available Budget in
                     <span class="budget-month">%Month%</span>
                 </h5>
-                <div class="budget-total">+ 272,000.00</div>
+                <div class="budget-total"></div>
             </div>
             <div class="budget-bottom col-md-3">
                 <div class="budget-inc row">
@@ -38,7 +38,7 @@
                         <span class="exp-total">0</span>
                     </div>
                     <div class="col-md-2">
-                        <span class="exp-percentage badge badge-danger">--</span>
+                        <span class="exp-percentage badge badge-danger">%</span>
                     </div>
                 </div>
             </div>
